--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "ava": "^0.14.0",
     "babel-cli": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.9.0",
-    "eslint-config-stylelint": "^1.0.0",
     "goose-parser": "^0.2.0-alpha.30",
     "lodash": "^4.11.2",
     "minimist": "^1.2.0",
@@ -23,10 +21,8 @@
   },
   "scripts": {
     "ava": "ava --verbose \"__tests__/**/*.js\"",
-    "lint": "eslint . --ignore-path .gitignore",
-    "build": "babel src -d build",
-    "parse": "node build/index.js",
-    "test": "npm run ava && npm run lint"
+    "parse": "node src/index.js",
+    "test": "npm run ava"
   },
   "eslintConfig": {
     "extends": [
